fixed shift-space issue; sync styles; bump 0.6.14

--- a/style/layout.css
+++ b/style/layout.css
@@ -51,10 +51,6 @@
   margin-right: 0;
 }
 
-.cirru-expr.is-empty {
-  padding: 0 8px;
-}
-
 .cirru-expr.is-root {
   display: block;
   margin-top: 0;
@@ -65,8 +61,11 @@
   display: inline-block;
   border-width: 0 0 1px 0;
   padding: 0px 4px 4px 4px;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0 4px;
+}
+
+.cirru-expr.is-empty {
+  padding: 0 8px;
 }
 
 .cirru-expr.is-folded {
@@ -77,7 +76,7 @@
   color: hsl(0, 0%, 60%);
   padding: 0 8px;
   line-height: 24px;
-  max-width: 400;
+  max-width: 400px;
   overflow: hidden;
   text-overflow: ellipsis;
   margin: 2px 8px;
